tests/errors/err_did_you_mean_func.mix
// ERROR: undefined function 'prnt'
main()
    prnt("hello")
